app/assets/stylesheets/pages/_home.scss
// Specific CSS for your home-page
html, body{
width: 100%;
height: 100%;
padding: 0px;
margin: 0px;
overflow-x: hidden;
}

#home-arrow {
  transform-origin: 50% 50%;
  transform: translate3d(-50%, -50%, 0);
  animation: bounce 2s infinite;
  padding-top: 10px;
  font-size: 5em;
  color: white;
  cursor: pointer;
  text-decoration: none;
  &:hover{
    text-decoration: none;
  }
}

@keyframes bounce {
  0%, 20%, 50%, 80%, 100% {
    transform: translateY(0);
  }
  40% {
    transform: translateY(-30px);
  }
  60% {
    transform: translateY(-15px);
  }
}

#homepage-main-greet {
h1{
font-weight: 900;
font-size: 100px;
}
p{
  font-weight: 700;
  font-size: 56px;
}
}

.info-card-img {
  height: auto;
  max-width: 100%;
}

